added-by-last-try

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>assiment-02</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="botter">
 
     <nav class="nav-head flex">
         <div class="nav-title flex">
