--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <nav class="nav-head flex">
         <div class="nav-title flex">
-         <img class="mg" src="/assets/logo.png" alt="">
+         <img class="mg" src="./assets/logo.png" alt="">
          <h3 class="sc"> SCHOOL </h3>
         </div>
      <ul class="nav-list flex">
@@ -31,7 +31,7 @@
         </div>
 
          <div class="img-b">
-             <img src="/assets/hero-kids.png" alt="">
+             <img src="./assets/hero-kids.png" alt="">
          </div>
      </div>
  </header>
@@ -42,7 +42,7 @@
      <div class="card-contner flex">
          <div class="card1 flex">
              <div class="card-c1">
-                 <img src="/assets/kinder.png" alt="" class="card-icone">
+                 <img src="./assets/kinder.png" alt="" class="card-icone">
                  <h3 class="card-h">Kinder (3-6) Years</h3>
                  <p class="text">Cum sociis natoque penatibus et magnis
                      dis parturient montes, nascetur ridiculus
@@ -52,7 +52,7 @@
          </div>
          <div class="card2 flex ">
              <div class="card-c2"> 
-                 <img src="/assets/elementary.png" alt="" class="card-icone">
+                 <img src="./assets/elementary.png" alt="" class="card-icone">
                  <h3 class="card-h">Elementary School</h3>
                  <p class="text">Cum sociis natoque penatibus et magnis
                      dis parturient montes, nascetur ridiculus
@@ -61,7 +61,7 @@
          </div>
          <div class="card3 flex">
              <div class="card-c3">  
-                  <img src="/assets/middle.png" alt="" class="card-icone">
+                  <img src="./assets/middle.png" alt="" class="card-icone">
                  <h3 class="card-h">Middle (10-16) Years</h3>
                  <p class="text">Cum sociis natoque penatibus et magnis
                      dis parturient montes, nascetur ridiculus
@@ -80,7 +80,7 @@
      <div class="child flex">
 
          <div class="child1">
-             <img class="iimm" src="/assets/story-1.png" alt=""> <br>
+             <img class="iimm" src="./assets/story-1.png" alt=""> <br>
              <button class="button-x" >November 19, 2019</button>
              <h2 class="he1">A fun toddler coloring training on <br>
                  classroom</h2>
@@ -92,28 +92,28 @@
          <div class="child-head ">
 
              <div class="child24">
-                 <img class="image-c" src="/assets/story-2.png" alt=""><br>
+                 <img class="image-c" src="./assets/story-2.png" alt=""><br>
                  <button class="btn-c">November 19, 2019</button>
                  <h4 class="par-c">Find out if a school fits the
                      family’s needs</h4>
              </div>
 
              <div class="child24">
-                 <img class="image-c" src="/assets/story-3.png" alt=""><br>
+                 <img class="image-c" src="./assets/story-3.png" alt=""><br>
                  <button class="btn-c">November 19, 2019</button>
                  <h4 class="par-c">Find out if a school fits the
                      family’s needs</h4>
              </div>
 
              <div class="child24">
-                 <img class="image-c" src="/assets/story-4.png" alt=""><br>
+                 <img class="image-c" src="./assets/story-4.png" alt=""><br>
                  <button class="btn-c">November 19, 2019</button>
                  <h4 class="par-c">Find out if a school fits the
                      family’s needs</h4>
              </div>
 
              <div class="child24">
-                 <img class="image-c" src="/assets/story-5.png" alt=""><br>
+                 <img class="image-c" src="./assets/story-5.png" alt=""><br>
                  <button class="btn-c">November 19, 2019</button>
                  <h4 class="par-c">Find out if a school fits the
                      family’s needs</h4>
@@ -148,8 +148,8 @@
          <h3>Keep In Touch</h3>
        <div class="m1 flex">
          <img class="mt" src="./assets/fb.png" alt="">
-         <img class="mt" src="/assets/dribble.png" alt="">
-         <img class="mt" src="/assets/twitter.png" alt="">
+         <img class="mt" src="./assets/dribble.png" alt="">
+         <img class="mt" src="./assets/twitter.png" alt="">
          <img class="mt" src="./assets/google+.png" alt="">
        </div>
      </div>
